--- a/M3UToolsJPA/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/M3UToolsJPA/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -18,5 +18,10 @@
     "name": "task.schedule.cron",
     "type": "java.lang.String",
     "description": "cron value to run scheduled tasks'"
+  },
+  {
+    "name": "aspect.enabled",
+    "type": "java.lang.String",
+    "description": "A description for 'aspect.enabled'"
   }
 ]}
