--- a/M3UToolsJPA/src/main/resources/application.properties
+++ b/M3UToolsJPA/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.properties.hibernate.generate_statistics=false
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.maximum-pool-size=50
 spring.datasource.hikari.max-lifetime=2000000
 spring.datasource.hikari.auto-commit=true
 
@@ -47,3 +47,5 @@ server.ssl.keyStoreType: PKCS12
 server.ssl.keyAlias: 1
 
 task.schedule.cron=0 0 2 * * ?
+
+aspect.enabled:true
